@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare setup
+DEPEND=ssl? ( dev-libs/openssl ) !minimal? ( tcpd? ( sys-apps/tcp-wrappers ) ) virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=Nagios Remote Plugin Executor
+EAPI=5
+HOMEPAGE=http://www.nagios.org/
+IUSE=command-args ssl tcpd minimal
+KEYWORDS=~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2+
+RDEPEND=ssl? ( dev-libs/openssl ) !minimal? ( tcpd? ( sys-apps/tcp-wrappers ) ) !minimal? ( || ( net-analyzer/nagios-plugins net-analyzer/monitoring-plugins ) )
+SLOT=0
+SRC_URI=mirror://sourceforge/nagios/nrpe-2.15.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=c558673864c1105d22632b4c30a10938
