@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/nrpe
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nrpe/ChangeLog,v 1.33 2014/07/08 15:59:26 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nrpe/ChangeLog,v 1.34 2015/04/11 03:25:15 mjo Exp $
+
+*nrpe-2.15-r2 (11 Apr 2015)
+
+  11 Apr 2015; Michael Orlitzky <mjo@gentoo.org> +nrpe-2.15-r2.ebuild:
+  Accept net-analyzer/monitoring-plugins for non-minimal install, bug #540956.
 
 *nrpe-2.15-r1 (08 Jul 2014)
 
